
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int GTIA_COLBK ;
 int GTIA_COLPF0 ;
 int GTIA_COLPF1 ;
 int GTIA_COLPF2 ;
 int GTIA_COLPF3 ;
 int GTIA_COLPM0 ;
 int GTIA_COLPM1 ;
 int GTIA_COLPM2 ;
 int GTIA_COLPM3 ;
 int GTIA_GRACTL ;
 int GTIA_GRAFM ;
 int GTIA_GRAFP0 ;
 int GTIA_GRAFP1 ;
 int GTIA_GRAFP2 ;
 int GTIA_GRAFP3 ;
 int GTIA_HPOSM0 ;
 int GTIA_HPOSM1 ;
 int GTIA_HPOSM2 ;
 int GTIA_HPOSM3 ;
 int GTIA_HPOSP0 ;
 int GTIA_HPOSP1 ;
 int GTIA_HPOSP2 ;
 int GTIA_HPOSP3 ;
 int GTIA_M0PL ;
 int GTIA_M1PL ;
 int GTIA_M2PL ;
 int GTIA_M3PL ;
 int GTIA_P0PL ;
 int GTIA_P1PL ;
 int GTIA_P2PL ;
 int GTIA_P3PL ;
 int GTIA_PRIOR ;
 int GTIA_SIZEM ;
 int GTIA_SIZEP0 ;
 int GTIA_SIZEP1 ;
 int GTIA_SIZEP2 ;
 int GTIA_SIZEP3 ;
 int * GTIA_TRIG_latch ;
 int GTIA_VDELAY ;
 int GTIA_speaker ;
 int PF0PM ;
 int PF1PM ;
 int PF2PM ;
 int PF3PM ;
 int StateSav_SaveINT (int*,int) ;
 int StateSav_SaveUBYTE (int *,int) ;
 int consol_mask ;

void GTIA_StateSave(void)
{
 int next_console_value = 7;

 StateSav_SaveUBYTE(&GTIA_HPOSP0, 1);
 StateSav_SaveUBYTE(&GTIA_HPOSP1, 1);
 StateSav_SaveUBYTE(&GTIA_HPOSP2, 1);
 StateSav_SaveUBYTE(&GTIA_HPOSP3, 1);
 StateSav_SaveUBYTE(&GTIA_HPOSM0, 1);
 StateSav_SaveUBYTE(&GTIA_HPOSM1, 1);
 StateSav_SaveUBYTE(&GTIA_HPOSM2, 1);
 StateSav_SaveUBYTE(&GTIA_HPOSM3, 1);
 StateSav_SaveUBYTE(&PF0PM, 1);
 StateSav_SaveUBYTE(&PF1PM, 1);
 StateSav_SaveUBYTE(&PF2PM, 1);
 StateSav_SaveUBYTE(&PF3PM, 1);
 StateSav_SaveUBYTE(&GTIA_M0PL, 1);
 StateSav_SaveUBYTE(&GTIA_M1PL, 1);
 StateSav_SaveUBYTE(&GTIA_M2PL, 1);
 StateSav_SaveUBYTE(&GTIA_M3PL, 1);
 StateSav_SaveUBYTE(&GTIA_P0PL, 1);
 StateSav_SaveUBYTE(&GTIA_P1PL, 1);
 StateSav_SaveUBYTE(&GTIA_P2PL, 1);
 StateSav_SaveUBYTE(&GTIA_P3PL, 1);
 StateSav_SaveUBYTE(&GTIA_SIZEP0, 1);
 StateSav_SaveUBYTE(&GTIA_SIZEP1, 1);
 StateSav_SaveUBYTE(&GTIA_SIZEP2, 1);
 StateSav_SaveUBYTE(&GTIA_SIZEP3, 1);
 StateSav_SaveUBYTE(&GTIA_SIZEM, 1);
 StateSav_SaveUBYTE(&GTIA_GRAFP0, 1);
 StateSav_SaveUBYTE(&GTIA_GRAFP1, 1);
 StateSav_SaveUBYTE(&GTIA_GRAFP2, 1);
 StateSav_SaveUBYTE(&GTIA_GRAFP3, 1);
 StateSav_SaveUBYTE(&GTIA_GRAFM, 1);
 StateSav_SaveUBYTE(&GTIA_COLPM0, 1);
 StateSav_SaveUBYTE(&GTIA_COLPM1, 1);
 StateSav_SaveUBYTE(&GTIA_COLPM2, 1);
 StateSav_SaveUBYTE(&GTIA_COLPM3, 1);
 StateSav_SaveUBYTE(&GTIA_COLPF0, 1);
 StateSav_SaveUBYTE(&GTIA_COLPF1, 1);
 StateSav_SaveUBYTE(&GTIA_COLPF2, 1);
 StateSav_SaveUBYTE(&GTIA_COLPF3, 1);
 StateSav_SaveUBYTE(&GTIA_COLBK, 1);
 StateSav_SaveUBYTE(&GTIA_PRIOR, 1);
 StateSav_SaveUBYTE(&GTIA_VDELAY, 1);
 StateSav_SaveUBYTE(&GTIA_GRACTL, 1);

 StateSav_SaveUBYTE(&consol_mask, 1);
 StateSav_SaveINT(&GTIA_speaker, 1);
 StateSav_SaveINT(&next_console_value, 1);
 StateSav_SaveUBYTE(GTIA_TRIG_latch, 4);
}
